--- a/train_config.yaml
+++ b/train_config.yaml
@@ -4,8 +4,8 @@ hydra:
 # general
 batch_size: 16
 num_workers: 6
-num_epochs: 30
-gpu_num: 1
+num_epochs: 40
+gpu_num: 0
 save_path: models
 experiment_name: test
 seed: 21
@@ -14,7 +14,7 @@ test_run: false
 data_path: data
 height: 400
 width: 400
-resizer_type: vanilla  # vanilla, letterbox
+resizer_type: letterbox  # vanilla, letterbox
 # training
 early_stopping: 7
 learning_rate: 1e-3
