--- a/train_config.yaml
+++ b/train_config.yaml
@@ -7,14 +7,14 @@ num_workers: 6
 num_epochs: 40
 gpu_num: 0
 save_path: models
-experiment_name: test
+experiment_name: vanilla_resizer
 seed: 21
 test_run: false
 # data
 data_path: data
 height: 400
 width: 400
-resizer_type: letterbox  # vanilla, letterbox
+resizer_type: vanilla  # vanilla, letterbox
 # training
 early_stopping: 7
 learning_rate: 1e-3
