--- a/train_config.yaml
+++ b/train_config.yaml
@@ -7,7 +7,7 @@ num_workers: 6
 num_epochs: 40
 gpu_num: 0
 save_path: models
-experiment_name: test
+experiment_name: warmup_scheduler
 seed: 21
 test_run: false
 # data
@@ -16,8 +16,10 @@ height: 400
 width: 400
 resizer_type: letterbox  # vanilla, letterbox
 # training
-early_stopping: 7
+early_stopping: 20
 learning_rate: 1e-3
 weight_decay: 0.
 lr_factor: 0.5
 lr_patience: 3
+start_warmup_lr: 1e-5
+warmup_end: 5
