--- a/train_config.yaml
+++ b/train_config.yaml
@@ -7,7 +7,7 @@ num_workers: 6
 num_epochs: 40
 gpu_num: 0
 save_path: models
-experiment_name: test
+experiment_name: cutmix
 seed: 21
 test_run: false
 # data
@@ -21,3 +21,5 @@ learning_rate: 1e-3
 weight_decay: 0.
 lr_factor: 0.5
 lr_patience: 3
+cutmix_beta: 1.
+cutmix_prob: 0.5
