--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,7 @@ attrs==19.1.0
 backcall==0.1.0
 bleach==3.1.0
 cachetools==4.1.1
-certifi==2020.4.5.1
+certifi==2020.6.20
 chardet==3.0.4
 colorama==0.4.3
 configobj==5.0.6
@@ -26,16 +26,18 @@ grandalf==0.6
 grpcio==1.30.0
 humanize==2.3.0
 hydra-core==0.11.3
-idna==2.9
+idna==2.10
 imageio==2.6.1
 imgaug==0.2.6
-importlib-metadata==1.6.0
+importlib-metadata==1.7.0
 imutils==0.5.3
 inflect==3.0.2
 ipykernel==5.1.1
 ipython==7.7.0
 ipython-genutils==0.2.0
 ipywidgets==7.5.1
+jedi==0.17.1
+Jinja2==2.11.2
 joblib==0.14.0
 json5==0.9.2
 jsonpath-ng==1.5.1
@@ -52,12 +54,15 @@ MarkupSafe==1.1.1
 matplotlib==3.1.1
 mistune==0.8.4
 nanotime==0.5.2
+nbconvert==5.6.1
 nbformat==4.4.0
 networkx==2.3
 notebook==6.0.0
-numpy==1.17.2
+numpy==1.19.0
+oauthlib==3.1.0
 omegaconf==1.4.1
 opencv-python==4.1.1.26
+opencv-python-headless==4.2.0.34
 packaging==20.3
 pandas==0.25.1
 pandoc==1.0.2
@@ -67,7 +72,6 @@ pathspec==0.8.0
 pexpect==4.7.0
 pickleshare==0.7.5
 Pillow==7.0.0
-pkg-resources==0.0.0
 ply==3.11
 prometheus-client==0.7.1
 prompt-toolkit==2.0.9
@@ -86,7 +90,8 @@ PyWavelets==1.0.3
 PyYAML==5.1.2
 pyzmq==18.0.2
 qtconsole==4.5.2
-requests==2.23.0
+randaugment==1.0.2
+requests==2.24.0
 requests-oauthlib==1.3.0
 rsa==4.6
 ruamel.yaml==0.16.10
@@ -96,7 +101,7 @@ scikit-learn==0.21.3
 scipy==1.4.1
 Send2Trash==1.5.0
 shortuuid==1.0.1
-six==1.12.0
+six==1.15.0
 sklearn==0.0
 smmap==3.0.2
 tensorboard==2.2.2
