--- a/train_config.yaml
+++ b/train_config.yaml
@@ -7,7 +7,7 @@ num_workers: 6
 num_epochs: 40
 gpu_num: 0
 save_path: models
-experiment_name: test
+experiment_name: self_adversarial
 seed: 21
 test_run: false
 # data
@@ -15,9 +15,12 @@ data_path: data
 height: 400
 width: 400
 resizer_type: letterbox  # vanilla, letterbox
+fgsm_prob: 0.5
+fgsm_epsilon_min: 0.05
+fgsm_epsilon_max: 0.30
 # training
 early_stopping: 7
 learning_rate: 1e-3
 weight_decay: 0.
 lr_factor: 0.5
-lr_patience: 3
+lr_patience: 10
